--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* Importing Kanit */
+@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+
 * {
     margin: 0;
 }
@@ -17,6 +20,7 @@ header {
 
 
 ul {
+    font-family: 'Kanit', sans-serif;
     display: flex;
     position: relative;
     left: 200px;
