--- a/style.css
+++ b/style.css
@@ -32,3 +32,12 @@ ul {
 li {
     padding-left: 20px;
 }
+
+li:hover {
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
