--- a/style.css
+++ b/style.css
@@ -1,29 +1,40 @@
 /* Importing Kanit */
 @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+/* Importing roboto */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 
 * {
     margin: 0;
+    scroll-behavior: smooth;
+}
+
+html::-webkit-scrollbar {
+    background-color: rgb(54, 12, 137);
+    width: 5px;
+    border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb {
+    background-color: #A94EFF;
+    border-radius: 10px;
 }
 
 body {
-    background-image: url('./Resources/bg2.jpg');
     color: white;
+    overflow-x: hidden;
+    background-image: url('./Resources/bg2.jpg');
 }
 
 header {
     display: flex;
 }
 
-.branding {
-    display: flex;
-}
-
-
 ul {
     font-family: 'Kanit', sans-serif;
     display: flex;
     position: relative;
-    left: 200px;
+    left: 425px;
     top: 35px;
     list-style: none;
     font-size: 20px;
@@ -40,4 +51,44 @@ li:hover {
 a {
     text-decoration: none;
     color: white;
+}
+
+video {
+    position: absolute;
+    height: auto;
+    width: 100%;
+    z-index: -1;
+}
+
+.branding {
+    position: relative;
+    top: 155px;
+    /* left: 325px; */
+    left: 335px;
+    align-content: center;
+}
+
+.discover_btn {
+    position: relative;
+    top: 170px;
+    right: 70px;
+    padding: 10px;
+    padding-left: 50px;
+    padding-right: 50px;
+    font-size: 20px;
+    border-radius: 40px;
+    background: transparent;
+    color: white;
+    border: 1px solid white;
+}
+
+.discover_btn:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+#main_div-1 {
+    height: 100vh;
 }
