--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 /* Importing Kanit */
 @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
-/* Importing roboto */
+/* Importing Roboto */
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
+/* Importing Noto Sans Cypro Minoan */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Cypro+Minoan&display=swap');
+/* Importing Open Sans */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 * {
     margin: 0;
@@ -24,6 +27,7 @@ body {
     color: white;
     overflow-x: hidden;
     background-image: url('./Resources/bg2.jpg');
+    scroll-behavior: smooth;
 }
 
 header {
@@ -45,6 +49,7 @@ li {
 }
 
 li:hover {
+    color: #A94EFF;
     cursor: pointer;
 }
 
@@ -72,23 +77,114 @@ video {
     position: relative;
     top: 170px;
     right: 70px;
-    padding: 10px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding: 10px 50px 10px 50px;
     font-size: 20px;
     border-radius: 40px;
     background: transparent;
     color: white;
     border: 1px solid white;
+    transition: 0.5s;
+    font-weight: bold;
 }
 
 .discover_btn:hover {
+    transition: 0.5s;
     background-color: white;
     color: black;
-    border: 1px solid black;
+    border: 1px solid #1A0848;
     cursor: pointer;
 }
 
 #main_div-1 {
     height: 100vh;
+}
+
+#main_div-2 {
+    height: 100vh;
+    background-image: url('./Resources/bg6.jpg');
+    clear: both;
+}
+
+.main_div-text {
+    position: relative;
+    top: 200px;
+    left: 100px;
+    width: 600px;
+    height: auto;
+    font-family: 'Roboto', sans-serif;
+    font-weight: lighter;
+}
+
+.img_deaf {
+    position: relative;
+    bottom: 220px;
+    left: 700px;
+    border-radius: 5px;
+    clip-path: circle();
+    height: 450px;
+}
+
+#main_div-3 {
+    background-image: url('./Resources/bg8.jpg');
+    height: 100vh;
+}
+
+#main_div-3 h1 {
+    font-family: 'Noto Sans Cypro Minoan', sans-serif;
+    display: flex;
+    position: relative;
+    top: 20px;
+    justify-content: center;
+}
+
+.img_UI {
+    height: 400px;
+    position: relative;
+    top: 100px;
+    left: 25px;
+}
+
+#main_div-3 h3 {
+    position: relative;
+    bottom: 200px;
+    left: 700px;
+    width: 600px;
+    height: auto;
+    font-family: 'Roboto', sans-serif;
+    font-weight: lighter;
+}
+
+#main_div-3 button {
+    position: relative;
+    bottom: 150px;
+    left: 700px;
+    padding: 10px 20px 10px 20px;
+    background: rgb(233, 233, 233);
+    font-weight: bold;
+    color: #022135;
+    font-size: 15px;
+    border: 1px solid white;
+    transition: 0.5s;
+}
+
+#main_div-3 button:hover {
+    transition: 0.5s;
+    cursor: pointer;
+    background-color: #022135;
+    color: white;
+}
+
+#credits {
+    display: flex;
+    justify-content: center;
+    background-color: #022135;
+    padding: 10px;
+}
+
+#credits h5 {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: lighter;
+    font-size: 15px;
+    opacity: 75%;
+
 }
