--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ html::-webkit-scrollbar {
     background-color: rgb(54, 12, 137);
     width: 5px;
     border-radius: 10px;
+    overflow-x: hidden;
 }
 
 html::-webkit-scrollbar-thumb {
@@ -217,7 +218,6 @@ video {
     }
 
     #menu_brgr {
-        position: fixed;
         display: flex;
         z-index: 2;
     }
@@ -225,7 +225,7 @@ video {
     #nav_connections {
         position: fixed;
         left: 450px;
-        transition: 1s;
+        transition: 0.75s;
         background-color: #022135;
         height: 100vh;
         width: 100%;
@@ -276,6 +276,87 @@ video {
         position: static;
         top: 0px;
         right: 0px;
+    }
+
+    #main_div-2 {
+        height: 100vh;
+        background-image: url('./Resources/bg6.jpg');
+        clear: both;
+    }
+
+    .main_div-text {
+        /* text-align: center; */
+        position: relative;
+        top: 250px;
+        left: 0px;
+        width: 100%;
+        height: auto;
+        font-family: 'Roboto', sans-serif;
+        font-weight: lighter;
+        margin: 1px solid white;
+    }
+
+    .img_deaf {
+        position: relative;
+        bottom: 555px;
+        left: 5px;
+        right: 0;
+        border-radius: 5px;
+        clip-path: none;
+        height: 250px;
+    }
+
+    #main_div-3 {
+        background-image: url('./Resources/bg8.jpg');
+        height: 100vh;
+    }
+
+    #main_div-3 h1 {
+        font-family: 'Noto Sans Cypro Minoan', sans-serif;
+        display: flex;
+        position: relative;
+        top: 20px;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .img_UI {
+        height: 200px;
+        position: relative;
+        top: 40px;
+        left: 35px;
+    }
+
+    #main_div-3 h3 {
+        position: relative;
+        bottom: 0px;
+        top: 50px;
+        left: 0px;
+        width: 100%;
+        height: auto;
+        font-family: 'Roboto', sans-serif;
+        font-weight: lighter;
+    }
+
+    #main_div-3 button {
+        position: relative;
+        bottom: 0px;
+        top: 70px;
+        left: 13vh;
+        padding: 10px 20px 10px 20px;
+        background: rgb(233, 233, 233);
+        font-weight: bold;
+        color: #022135;
+        font-size: 15px;
+        border: 1px solid white;
+        transition: 0.5s;
+    }
+
+    #main_div-3 button:hover {
+        transition: 0.5s;
+        cursor: pointer;
+        background-color: #022135;
+        color: white;
     }
 
 }
